--- a/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.76 Kernel Configuration
+# Linux/mips 3.0.78 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -602,8 +602,6 @@ CONFIG_NET_SCH_PRIO=y
 CONFIG_NET_SCH_RED=m
 # CONFIG_NET_SCH_SFB is not set
 CONFIG_NET_SCH_SFQ=m
-CONFIG_NET_SCH_ESFQ=m
-CONFIG_NET_SCH_ESFQ_NFCT=y
 # CONFIG_NET_SCH_TEQL is not set
 # CONFIG_NET_SCH_TBF is not set
 CONFIG_NET_SCH_GRED=m
@@ -627,7 +625,7 @@ CONFIG_NET_CLS_U32=m
 CONFIG_CLS_U32_MARK=y
 # CONFIG_NET_CLS_RSVP is not set
 # CONFIG_NET_CLS_RSVP6 is not set
-# CONFIG_NET_CLS_FLOW is not set
+CONFIG_NET_CLS_FLOW=m
 CONFIG_NET_EMATCH=y
 CONFIG_NET_EMATCH_STACK=32
 CONFIG_NET_EMATCH_CMP=m
