wifi drivers: force unlock EEPROM region code (if used)

--- a/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.5.X.X/rt3090_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.5.X.X/rt3090_ap/Makefile
@@ -143,10 +143,19 @@ endif
 ###################
 EXTRA_CFLAGS += -DAGGREGATION_SUPPORT -DPIGGYBACK_SUPPORT -DWMM_SUPPORT -DLINUX
 EXTRA_CFLAGS += -DCONFIG_AP_SUPPORT -DAP_SCAN_SUPPORT -DUAPSD_AP_SUPPORT -DDOT11_N_SUPPORT -DDOT1X_SUPPORT
-EXTRA_CFLAGS += -DRTMP_MAC_PCI -DRTMP_PCI_SUPPORT -DRTMP_RF_RW_SUPPORT -DRTMP_FLASH_SUPPORT -DRTMP_EFUSE_SUPPORT
+EXTRA_CFLAGS += -DRTMP_MAC_PCI -DRTMP_PCI_SUPPORT -DRTMP_RF_RW_SUPPORT
 EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
+
+# do not lock CountryRegion from EEPROM
+EXTRA_CFLAGS += -DEEPROM_COUNTRY_UNLOCK
+
+# provide external Flash memory support
+EXTRA_CFLAGS += -DRTMP_FLASH_SUPPORT
+
+# provide internal eFuse memory support
+#EXTRA_CFLAGS += -DRTMP_EFUSE_SUPPORT
 
 # provide roaming
 #EXTRA_CFLAGS += -DIAPP_SUPPORT
