--- a/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.7.X.X/rt3090_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt309x/2.7.X.X/rt3090_ap/Makefile
@@ -220,6 +220,9 @@ EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 EXTRA_CFLAGS += -DRT_SOC_SUPPORT
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
+# do not lock CountryRegion from EEPROM
+EXTRA_CFLAGS += -DEEPROM_COUNTRY_UNLOCK
+
 # provide external Flash memory support
 EXTRA_CFLAGS += -DRTMP_FLASH_SUPPORT
 
