--- a/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.4.X.X/rt2860v2_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.4.X.X/rt2860v2_ap/Makefile
@@ -171,6 +171,12 @@ EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT
 EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
+# do not lock CountryRegion from EEPROM
+EXTRA_CFLAGS += -DEEPROM_COUNTRY_UNLOCK
+
+# provide external Flash memory support
+EXTRA_CFLAGS += -DRTMP_FLASH_SUPPORT
+
 # use external LNA switch for select 2.4/5GHz via GPIO25
 #EXTRA_CFLAGS += -DBOARD_EXT_SWITCH_LNA_2DOT4_5
 
