--- a/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.X.X/rt2860v2_ap/Makefile
+++ b/trunk/linux-3.0.x/drivers/net/wireless/rt3883/2.6.X.X/rt2860v2_ap/Makefile
@@ -201,6 +201,12 @@ EXTRA_CFLAGS += -DSTATS_COUNT_SUPPORT -DNEW_TXCONT -DNEW_TXCARRSUPP
 EXTRA_CFLAGS += -DRESOURCE_PRE_ALLOC
 EXTRA_CFLAGS += -DRSSI_FEEDBACK
 
+# do not lock CountryRegion from EEPROM
+EXTRA_CFLAGS += -DEEPROM_COUNTRY_UNLOCK
+
+# provide external Flash memory support
+EXTRA_CFLAGS += -DRTMP_FLASH_SUPPORT
+
 # use external LNA switch for select 2.4/5GHz via GPIO25
 #EXTRA_CFLAGS += -DBOARD_EXT_SWITCH_LNA_2DOT4_5
 
@@ -237,7 +243,7 @@ endif
 endif
 
 ifeq ($(CONFIG_RALINK_RT3883),y)
-EXTRA_CFLAGS += -DRT3883 -DDOT11N_SS3_SUPPORT -DA_BAND_SUPPORT -DRTMP_RF_RW_SUPPORT -DRTMP_FLASH_SUPPORT
+EXTRA_CFLAGS += -DRT3883 -DDOT11N_SS3_SUPPORT -DA_BAND_SUPPORT -DRTMP_RF_RW_SUPPORT
 # use 8 beacons for RT3883
 #EXTRA_CFLAGS += -DSPECIFIC_BCN_BUF_SUPPORT
 EXTRA_CFLAGS += -DRANGE_EXT_SUPPORT
