project config: allow enable IMQ module in project config, disable IMQ by default (performance degradation)

--- a/trunk/.config
+++ b/trunk/.config
@@ -46,8 +46,14 @@ CONFIG_FIRMWARE_ENABLE_UFSD=y
 ### Enable HFS+ filesystem support (read-only, add ~0.1MB)
 #CONFIG_FIRMWARE_ENABLE_HFSPLUS=y
 
-### Enable UVC camera modules (add ~0.2MB)
-CONFIG_FIRMWARE_ENABLE_UVC=y
+### Include IMQ module for shapers (add ~0.02MB, a bit of performance degradation)
+#CONFIG_FIRMWARE_INCLUDE_IMQ=y
+
+### Include ipset utility, and kernel modules (add ~0.4MB)
+CONFIG_FIRMWARE_INCLUDE_IPSET=y
+
+### Include UVC camera modules (add ~0.2MB)
+CONFIG_FIRMWARE_INCLUDE_UVC=y
 
 ### Include WebGUI international resources. Increased firmware size
 #CONFIG_FIRMWARE_INCLUDE_LANG_BR=y
@@ -64,9 +70,6 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 
 ### Include tcpdump utility, ~0.6MB
 #CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
-
-### Include ipset utility, and kernel modules (add ~0.4MB)
-CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include parted utility (make GPT partitions), ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_PARTED=y
