project config: allow enable IFB module in project config, disable IFB by default

--- a/trunk/.config
+++ b/trunk/.config
@@ -49,6 +49,9 @@ CONFIG_FIRMWARE_ENABLE_UFSD=y
 ### Include IMQ module for shapers (add ~0.02MB, a bit of performance degradation)
 #CONFIG_FIRMWARE_INCLUDE_IMQ=y
 
+### Include IFB module for shapers (add ~0.03MB, can not enabled for "RT-N65U" target)
+#CONFIG_FIRMWARE_INCLUDE_IFB=y
+
 ### Include ipset utility, and kernel modules (add ~0.4MB)
 CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
