--- a/trunk/user/iproute2/iproute2-3.1.0/tc/Makefile
+++ b/trunk/user/iproute2/iproute2-3.1.0/tc/Makefile
@@ -33,7 +33,7 @@ TCMODULES += q_htb.o
 #TCMODULES += q_drr.o
 #TCMODULES += q_qfq.o
 #TCMODULES += m_gact.o
-#TCMODULES += m_mirred.o
+TCMODULES += m_mirred.o
 #TCMODULES += m_nat.o
 TCMODULES += m_pedit.o
 #TCMODULES += m_skbedit.o
