--- a/trunk/configs/n65u_micro.config
+++ b/trunk/configs/n65u_micro.config
@@ -11,7 +11,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
 ### Firmware version (X.X.X.X-YYY)
 CONFIG_FIRMWARE_KERNEL_VER="3.0"
 CONFIG_FIRMWARE_ROOTFS_VER="3.6"
-CONFIG_FIRMWARE_BUILDS_VER="060"
+CONFIG_FIRMWARE_BUILDS_VER="061"
 
 ### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.0.x
@@ -90,7 +90,7 @@ CONFIG_FIRMWARE_INCLUDE_IPSET=y
 CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. kernel modules ~0.5MB
-#CONFIG_FIRMWARE_INCLUDE_NFSC=y
+CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. kernel modules ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_CIFS=y
