--- a/trunk/user/xl2tpd/Makefile
+++ b/trunk/user/xl2tpd/Makefile
@@ -54,10 +54,10 @@
 # ppp 2.4.3 sends a SIGTERM after 5 seconds, so it should be safe to
 # trust pppd. This work around will be removed in the near future.
 
-# DFLAGS= -g -DFIX_ZLB -DDEBUG_HELLO -DDEBUG_CLOSE -DDEBUG_FLOW -DDEBUG_PAYLOAD -DDEBUG_CONTROL -DDEBUG_CONTROL_XMIT -DDEBUG_FLOW_MORE -DDEBUG_MAGIC -DDEBUG_ENTROPY -DDEBUG_HIDDEN -DDEBUG_PPPD -DDEBUG_AAA -DDEBUG_FILE -DDEBUG_FLOW -DDEBUG_HELLO -DDEBUG_CLOSE -DDEBUG_ZLB -DDEBUG_AUTH -DDEBUG_MORE
+# DFLAGS= -g -DFIX_ZLB -DTRUST_PPPD_TO_DIE -DDEBUG_HELLO -DDEBUG_CLOSE -DDEBUG_FLOW -DDEBUG_PAYLOAD -DDEBUG_CONTROL -DDEBUG_CONTROL_XMIT -DDEBUG_FLOW_MORE -DDEBUG_MAGIC -DDEBUG_ENTROPY -DDEBUG_HIDDEN -DDEBUG_PPPD -DDEBUG_AAA -DDEBUG_FILE -DDEBUG_FLOW -DDEBUG_HELLO -DDEBUG_CLOSE -DDEBUG_ZLB -DDEBUG_AUTH -DDEBUG_MORE
 # DFLAGS?= -DDEBUG_PPPD -DTRUST_PPPD_TO_DIE
 
-DFLAGS= -g -DFIX_ZLB
+DFLAGS= -g -DFIX_ZLB -DTRUST_PPPD_TO_DIE
 
 # Uncomment the next line for Linux. KERNELSRC is needed for if_pppol2tp.h,
 # but we use a local copy if we don't find it.
