kernel-3.0.x config: disable VLAN double tag for 2xRGMII target (N56U)

--- a/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.config
@@ -620,7 +620,7 @@ CONFIG_BRIDGE_2WAYS_FDB=y
 CONFIG_BRIDGE_EAP=y
 # CONFIG_NET_DSA is not set
 CONFIG_VLAN_8021Q=y
-CONFIG_VLAN_8021Q_DOUBLE_TAG=y
+# CONFIG_VLAN_8021Q_DOUBLE_TAG is not set
 # CONFIG_VLAN_8021Q_GVRP is not set
 # CONFIG_DECNET is not set
 CONFIG_LLC=y
