--- a/trunk/configs/IPv4/BN750DB/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/BN750DB/kernel-3.0.x.config
@@ -722,10 +722,8 @@ CONFIG_MTD_BLOCK=y
 #
 # RAM/ROM/Flash chip drivers
 #
-CONFIG_MTD_CFI=y
+# CONFIG_MTD_CFI is not set
 # CONFIG_MTD_JEDECPROBE is not set
-CONFIG_MTD_GEN_PROBE=y
-# CONFIG_MTD_CFI_ADV_OPTIONS is not set
 CONFIG_MTD_MAP_BANK_WIDTH_1=y
 CONFIG_MTD_MAP_BANK_WIDTH_2=y
 CONFIG_MTD_MAP_BANK_WIDTH_4=y
@@ -736,10 +734,6 @@ CONFIG_MTD_CFI_I1=y
 CONFIG_MTD_CFI_I2=y
 # CONFIG_MTD_CFI_I4 is not set
 # CONFIG_MTD_CFI_I8 is not set
-# CONFIG_MTD_CFI_INTELEXT is not set
-CONFIG_MTD_CFI_AMDSTD=y
-# CONFIG_MTD_CFI_STAA is not set
-CONFIG_MTD_CFI_UTIL=y
 # CONFIG_MTD_RAM is not set
 # CONFIG_MTD_ROM is not set
 # CONFIG_MTD_ABSENT is not set
@@ -748,7 +742,6 @@ CONFIG_MTD_CFI_UTIL=y
 # Mapping drivers for chip access
 #
 # CONFIG_MTD_COMPLEX_MAPPINGS is not set
-# CONFIG_MTD_PHYSMAP is not set
 CONFIG_MTD_PHYSMAP_START=0x1C000000
 CONFIG_MTD_PHYSMAP_LEN=0x1000000
 # CONFIG_MTD_INTEL_VR_NOR is not set
@@ -785,8 +778,8 @@ CONFIG_MTD_RALINK=y
 # CONFIG_MTD_NOR_RALINK is not set
 CONFIG_MTD_SPI_RALINK=y
 # CONFIG_MTD_NAND_RALINK is not set
-# CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_MTD_SPI_FAST_CLOCK is not set
+# CONFIG_RT2880_FLASH_4M is not set
 CONFIG_RT2880_FLASH_8M=y
 # CONFIG_RT2880_FLASH_16M is not set
 CONFIG_MTD_PHYSMAP_BUSWIDTH=2
