--- a/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
@@ -132,6 +132,8 @@ CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
+CONFIG_MOBILITY_GROUP_RAMLESS=y
+CONFIG_PAGECACHE_RECLAIM=y
 # CONFIG_COMPACTION is not set
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
