--- a/trunk/linux-3.0.x/mm/Kconfig
+++ b/trunk/linux-3.0.x/mm/Kconfig
@@ -174,6 +174,20 @@ config SPLIT_PTLOCK_CPUS
 	default "999999" if DEBUG_SPINLOCK || DEBUG_LOCK_ALLOC
 	default "4"
 
+# support for memory defrag
+config MOBILITY_GROUP_RAMLESS
+	bool "Allow reduce memory fragmentation on system with < 256MB RAM"
+	default n
+	help
+	  Allow RAM pages grouping by mobility for RAM-less system
+
+# support for page cache reclaim
+config PAGECACHE_RECLAIM
+	bool "Allow pagecache reclaim for buffered I/O"
+	default n
+	help
+	  Allows the pagecache pages are reclaimed if the limit is exceeded.
+
 #
 # support for memory compaction
 config COMPACTION
