add fast kernel-mode pppoe passthrough module, remove pppoe-relay userspace daemon

--- a/trunk/configs/IPv4/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/RT-N65U/kernel-3.0.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.81 Kernel Configuration
+# Linux/mips 3.0.82 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -642,6 +642,7 @@ CONFIG_NET_SCH_FIFO=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
+CONFIG_NET_PPPOE_PTHROUGH=y
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
