--- a/trunk/configs/IPv6/BN750DB/kernel-3.4.x.config
+++ b/trunk/configs/IPv6/BN750DB/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.48 Kernel Configuration
+# Linux/mips 3.4.49 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -735,6 +735,7 @@ CONFIG_BQL=y
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
+CONFIG_NET_PPPOE_PTHROUGH=y
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
