--- a/trunk/linux-3.0.x/net/Kconfig
+++ b/trunk/linux-3.0.x/net/Kconfig
@@ -300,6 +300,7 @@ endmenu
 
 endmenu
 
+source "net/core/pthrough/Kconfig"
 source "net/ax25/Kconfig"
 source "net/can/Kconfig"
 source "net/irda/Kconfig"
