--- a/trunk/configs/IPv4/SWR1100/kernel-3.4.x.config
+++ b/trunk/configs/IPv4/SWR1100/kernel-3.4.x.config
@@ -1011,7 +1011,7 @@ CONFIG_USB_NET_RNDIS_HOST=m
 CONFIG_USB_NET_QMI_WWAN=m
 # CONFIG_USB_NET_INT51X1 is not set
 # CONFIG_USB_IPHETH is not set
-# CONFIG_USB_SIERRA_NET is not set
+CONFIG_USB_SIERRA_NET=m
 # CONFIG_USB_VL600 is not set
 CONFIG_WLAN=y
 # CONFIG_ATMEL is not set
@@ -1453,7 +1453,7 @@ CONFIG_USB_SERIAL_PL2303=m
 # CONFIG_USB_SERIAL_HP4X is not set
 # CONFIG_USB_SERIAL_SAFE is not set
 # CONFIG_USB_SERIAL_SIEMENS_MPI is not set
-# CONFIG_USB_SERIAL_SIERRAWIRELESS is not set
+CONFIG_USB_SERIAL_SIERRAWIRELESS=m
 # CONFIG_USB_SERIAL_SYMBOL is not set
 # CONFIG_USB_SERIAL_TI is not set
 # CONFIG_USB_SERIAL_CYBERJACK is not set
