kernel configs: fix cmd line

--- a/trunk/configs/IPv6/BN750DB/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/BN750DB/kernel-3.0.x.config
@@ -1707,7 +1707,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_EARLY_PRINTK is not set
 CONFIG_CMDLINE_BOOL=y
 CONFIG_CMDLINE="console=ttyS1,57600n8 root=/dev/mtdblock4 ro"
-# CONFIG_CMDLINE_OVERRIDE is not set
+CONFIG_CMDLINE_OVERRIDE=y
 # CONFIG_UBOOT_CMDLINE is not set
 
 #
