--- a/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.0.x.ram.config
@@ -1696,7 +1696,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_EARLY_PRINTK is not set
 CONFIG_CMDLINE_BOOL=y
 CONFIG_CMDLINE="console=ttyS1,57600n8 root=/dev/ram0"
-# CONFIG_CMDLINE_OVERRIDE is not set
+CONFIG_CMDLINE_OVERRIDE=y
 # CONFIG_UBOOT_CMDLINE is not set
 
 #
