add pagecache reclaim control, set default kernel 3.4 to N56U target, firmware version up

--- a/trunk/configs/IPv4/BN750DB/kernel-3.4.x.config
+++ b/trunk/configs/IPv4/BN750DB/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.49 Kernel Configuration
+# Linux/mips 3.4.50 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -135,7 +135,7 @@ CONFIG_ARCH_DISCARD_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_MOBILITY_GROUP_RAMLESS=y
-# CONFIG_PAGECACHE_RECLAIM is not set
+CONFIG_PAGECACHE_RECLAIM=y
 # CONFIG_COMPACTION is not set
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
