kernel configs: tune CMDLINE

--- a/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/RT-N56U/kernel-3.0.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.82 Kernel Configuration
+# Linux/mips 3.0.85 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1665,7 +1665,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_EARLY_PRINTK is not set
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE="console=ttyS1,57600n8 root=/dev/mtdblock4 ro"
+CONFIG_CMDLINE="console=ttyS1,57600n8 root=/dev/mtdblock4 rootfstype=squashfs"
 CONFIG_CMDLINE_OVERRIDE=y
 # CONFIG_UBOOT_CMDLINE is not set
 
