--- a/trunk/configs/IPv6/SWR1100/kernel-3.4.x.config
+++ b/trunk/configs/IPv6/SWR1100/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.50 Kernel Configuration
+# Linux/mips 3.4.52 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1795,7 +1795,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_EARLY_PRINTK is not set
 CONFIG_CMDLINE_BOOL=y
-CONFIG_CMDLINE="console=ttyS1,57600n8 root=/dev/mtdblock4 ro"
+CONFIG_CMDLINE="console=ttyS1,57600n8 root=/dev/mtdblock4 rootfstype=squashfs"
 CONFIG_CMDLINE_OVERRIDE=y
 # CONFIG_UBOOT_CMDLINE is not set
 
