--- a/trunk/libs/libexif/libexif-0.6.20/Makefile.am
+++ b/trunk/libs/libexif/libexif-0.6.20/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = m4m po libexif test doc binary contrib
+SUBDIRS = m4m po libexif test binary contrib
 
 EXTRA_DIST = @PACKAGE_TARNAME@.spec README-Win32.txt
 
