--- a/trunk/libs/libexif/libexif-0.6.20/Makefile.in
+++ b/trunk/libs/libexif/libexif-0.6.20/Makefile.in
@@ -287,7 +287,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = m4m po libexif test doc binary contrib
+SUBDIRS = m4m po libexif test binary contrib
 EXTRA_DIST = @PACKAGE_TARNAME@.spec README-Win32.txt libexif.pc.in \
 	libexif-uninstalled.pc.in
 pkgconfigdir = $(libdir)/pkgconfig
