kernel-3.x.x: ppp: disable IPX, Appletalk, MPLS encapsulation (allow only IPv4/IPv6)

--- a/trunk/configs/IPv4/RT-N65U/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/RT-N65U/kernel-3.0.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/mips 3.0.85 Kernel Configuration
+# Linux/mips 3.0.90 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -927,6 +927,7 @@ CONFIG_USB_SIERRA_NET=m
 # CONFIG_FDDI is not set
 # CONFIG_HIPPI is not set
 CONFIG_PPP=y
+CONFIG_PPP_ONLY_IP=y
 # CONFIG_PPP_MULTILINK is not set
 # CONFIG_PPP_FILTER is not set
 CONFIG_PPP_ASYNC=y
