--- a/trunk/configs/IPv6/RT-N56U/kernel-3.4.x.ram.config
+++ b/trunk/configs/IPv6/RT-N56U/kernel-3.4.x.ram.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.52 Kernel Configuration
+# Linux/mips 3.4.57 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1025,6 +1025,7 @@ CONFIG_TUN=y
 # CONFIG_HIPPI is not set
 # CONFIG_PHYLIB is not set
 CONFIG_PPP=y
+CONFIG_PPP_ONLY_IP=y
 # CONFIG_PPP_BSDCOMP is not set
 # CONFIG_PPP_DEFLATE is not set
 # CONFIG_PPP_FILTER is not set
