--- a/trunk/configs/n65u_full.config
+++ b/trunk/configs/n65u_full.config
@@ -131,7 +131,7 @@ CONFIG_FIRMWARE_INCLUDE_PARTED=y
 CONFIG_FIRMWARE_INCLUDE_SMBD=y
 
 ### Include syslog for SMB server, ~0.3MB
-#CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
+CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
 ### Include FTP server, ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_FTPD=y
