sqlite: decrease binary size

--- a/trunk/libs/libsqlite/Makefile
+++ b/trunk/libs/libsqlite/Makefile
@@ -17,6 +17,7 @@ configure:
 		$(if $(LIBS_BUILD_SHARED),--disable-static,--enable-static) \
 		$(if $(LIBS_BUILD_SHARED),--enable-shared,--disable-shared) \
 		--disable-readline \
+		--disable-dynamic-extensions \
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
