--- a/trunk/configs/IPv6/BN750DB/kernel-3.4.x.config
+++ b/trunk/configs/IPv6/BN750DB/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.57 Kernel Configuration
+# Linux/mips 3.4.58 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1645,6 +1645,7 @@ CONFIG_FAT_FS=m
 CONFIG_VFAT_FS=m
 CONFIG_FAT_DEFAULT_CODEPAGE=866
 CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_EXFAT_FS=m
 # CONFIG_NTFS_FS is not set
 
 #
