--- a/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv6/RT-N65U/kernel-3.0.x.ram.config
@@ -1532,6 +1532,7 @@ CONFIG_FAT_FS=m
 CONFIG_VFAT_FS=m
 CONFIG_FAT_DEFAULT_CODEPAGE=866
 CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_EXFAT_FS=m
 # CONFIG_NTFS_FS is not set
 
 #
