--- a/trunk/configs/n56u_aria.config
+++ b/trunk/configs/n56u_aria.config
@@ -47,6 +47,9 @@ CONFIG_FIRMWARE_ENABLE_UFSD=y
 ### Enable FAT/FAT32 filesystem support (~0.1MB)
 CONFIG_FIRMWARE_ENABLE_FAT=y
 
+### Enable exFAT filesystem support (~0.1MB)
+#CONFIG_FIRMWARE_ENABLE_EXFAT=y
+
 ### Enable EXT2 filesystem support (~0.1MB)
 #CONFIG_FIRMWARE_ENABLE_EXT2=y
 
